k8s/demo-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      imagePullSecrets:
        - name: harbor-pull
      containers:
        - name: app
          image: harbor.local:8443/demo/nginx:d6e809bec0628418dfd3b7fb14c288f7a7450d72
          ports:
            - containerPort: 8888
