k8s/demo-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo
spec:
  selector:
    app: demo-nginx
  ports:
    - name: http
      port: 80
      targetPort: 8888
